@@ -1,3 +1,5 @@
+/* containers */
+
 .dashboardcontainers
 {
     position: absolute;
@@ -52,4 +54,11 @@
     left: 255px;
     width: 500px;
     height: 250px;
+}
+
+/* dialogs */
+
+#noblogmsg
+{
+    width: 240px;
 }
