@@ -1,8 +1,8 @@
 -- AGGREGATOR --
 
-INSERT INTO aggregator_feed (type, hash, title, link, status) VALUES ("rss", "nNpPqQrR", "Slashdot", "http://rss.slashdot.org/Slashdot/slashdot", "new");
+INSERT INTO aggregator_feed (type, title, link, status) VALUES ("rss", "Slashdot", "http://rss.slashdot.org/Slashdot/slashdot", "new");
 
 SET @x=LAST_INSERT_ID();
 
-INSERT INTO aggregator_item (aggregator_feed_id, hash, title, link, description) VALUES (@x, "fFgGhHjJ", "Apple's iPhone Developer Crisis", "http://rss.slashdot.org/~r/Slashdot/slashdot/~3/LoChjdTYTRs/article.pl", "David Gerard writes \"iPhone development sounds closed-shop but simple — apply to be a developer, put application on the App Store, you and Apple make money. Except Apple can't keep up with the request load — whereas getting a developer contract used to take a couple of days, it's now taking months. Some early developers' contracts are expiring with no notice of renewal options. And Apple has no idea what's going on or the state of things. If you want to maintain a completely closed system, it helps if you can actually keep up with it.\" Reader h11:6 points out news of a recent study which suggests that \"Android's open source nature will give it a boost over Apple's iPhone,\" and thus take the lead in sales as soon as three years from now. It will be interesting to see how they deal with the flood of proposed apps as their popularity rises.");
-INSERT INTO aggregator_item (aggregator_feed_id, hash, title, link, description) VALUES (@x, "mMnNpPwW", "Google Earth Uncovers Secret UK Nuke Base", "http://rss.slashdot.org/~r/Slashdot/slashdot/~3/UAugK6C2E9g/article.pl", "thefickler writes \"Gone are the days when governments could easily hide top secret bases. These days it's a weekend pastime to see who can find top secret facilities using Google Earth. Now it's the UK government's turn to be outraged after a secret facility was revealed by a British tabloid. The facility is said to be located in Faslane on the River Clyde in Scotland. This nuclear base was previously blurred out by the request of the British Government. However, with the latest update provided via Google Earth, many of the blurred out locations were accidentally revealed.\" Update: 3/08 at 14:24 by SS: Multiple readers have pointed out that the issue here is not the location of the base — it's simply that details of buildings and objects within the base (such as the location of a pair of nuclear submarines) are accidentally visible after the UK government specifically requested they be blurred out.");
+INSERT INTO aggregator_item (aggregator_feed_id, title, link, description) VALUES (@x, "Apple's iPhone Developer Crisis", "http://rss.slashdot.org/~r/Slashdot/slashdot/~3/LoChjdTYTRs/article.pl", "David Gerard writes \"iPhone development sounds closed-shop but simple — apply to be a developer, put application on the App Store, you and Apple make money. Except Apple can't keep up with the request load — whereas getting a developer contract used to take a couple of days, it's now taking months. Some early developers' contracts are expiring with no notice of renewal options. And Apple has no idea what's going on or the state of things. If you want to maintain a completely closed system, it helps if you can actually keep up with it.\" Reader h11:6 points out news of a recent study which suggests that \"Android's open source nature will give it a boost over Apple's iPhone,\" and thus take the lead in sales as soon as three years from now. It will be interesting to see how they deal with the flood of proposed apps as their popularity rises.");
+INSERT INTO aggregator_item (aggregator_feed_id, title, link, description) VALUES (@x, "Google Earth Uncovers Secret UK Nuke Base", "http://rss.slashdot.org/~r/Slashdot/slashdot/~3/UAugK6C2E9g/article.pl", "thefickler writes \"Gone are the days when governments could easily hide top secret bases. These days it's a weekend pastime to see who can find top secret facilities using Google Earth. Now it's the UK government's turn to be outraged after a secret facility was revealed by a British tabloid. The facility is said to be located in Faslane on the River Clyde in Scotland. This nuclear base was previously blurred out by the request of the British Government. However, with the latest update provided via Google Earth, many of the blurred out locations were accidentally revealed.\" Update: 3/08 at 14:24 by SS: Multiple readers have pointed out that the issue here is not the location of the base — it's simply that details of buildings and objects within the base (such as the location of a pair of nuclear submarines) are accidentally visible after the UK government specifically requested they be blurred out.");
