@@ -57,30 +57,38 @@ h2
     text-align: left;
 }
 
-/* alert */
+/* dialog */
 
-.b-alert-div
+.b-dialog-modal
 {
+    z-indeX: 2501;
     position: absolute;
     top: 0;
     left: 0;
-    background: white;
+    width: 100%;
+    height: 100%;
+    background-color: black;
 }
-
-.b-alert-div-inner
+.b-dialog
 {
-    padding: 50px 20px 50px 20px;
-    border: gray 2px solid;
-    width: 320px;
-
-    display: table-cell;
-    vertical-align: middle;
-    text-align: left;
+    z-index: 2502;
+    position: absolute;
+    background-color: whitesmoke;
+    border: 1px solid lightslategray;
+    padding: 25px;
 }
-
-.b-alert-close
+.b-dialog-alert
 {
-    /* void */
+    width: 240px;
+}
+.b-dialog hr
+{
+    border: 0;
+    border-top: 1px solid lightslategray;
+}
+.b-dialog-buttons
+{
+    float: right;
 }
 
 /* form */
