@@ -89,3 +89,11 @@ HORAS TRABALHADAS: 4h
 - Atualizações no Dashboard
 
 HORAS TRABALHADAS: 5h
+
+==========
+24/03/2009
+==========
+
+- Inclusão do formulário para adicionar feeds
+
+HORAS TRABALHADAS: 2h
